Finished integration with mongodb
